testsuite/tests/explicit-dicts/should_fail/Incoherence3.stderr

Incoherence3.hs:10:12: error:
    • Explicit dictionary application not allowed: incoherence detected
    • In the expression: foo dict
      In an equation for ‘bar’: bar dict = foo dict
